# Django-Verify-Email

./: .gitignore  MANIFEST.in  README.md  manage.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml  python-publish.yml
Django_Verify_Email.egg-info/: PKG-INFO  SOURCES.txt
src/verify_email/: __init__.py  confirm.py  email_handler.py  errors.py  forms.py  models.py  signals.py  views.py
src/verify_email/templates/verify_email/: email_verification_failed.html  link_expired.html
verify_email/: __init__.py  admin.py  app_configurations.py  apps.py  confirm.py  custom_types.py  email_handler.py  errors.py  forms.py  interface.py  models.py  signals.py  tests.py  token_manager.py  urls.py  views.py
verify_email/locale/de/LC_MESSAGES/: django.po
verify_email/migrations/: 0001_initial.py
verify_email/templates/verify_email/: display_message.html  email_verification_failed.html  email_verification_msg.html  email_verification_subject.txt  link_expired.html  request_new_email.html  verification_template.html
