[metadata]
name = Django-Verify-Email
version = 1.0.9
author = Nitin
author_email = ns290670@gamil.com
description = A Django app for email verification.
url = https://github.com/foo290/Django-Verify-Email/
packages =setuptools.find_packages()
classifiers =
         Environment :: Web Environment
         Framework :: Django CMS :: 3.8
         Intended Audience :: Developers
         Programming Language :: Python :: 3.6
         License :: OSI Approved :: MIT License
         Operating System :: OS Independent
python_requires = >=3.6

[options]
include_package_data = true
packages = find:
