[metadata]
name = Django-Verify-Email
version = 2.0.4
author = leolivier
author_email = levillain.olivier@gamil.com
description = A Django app for email verification. Forked from foo290 s initial version
url = https://github.com/leolivier/Django-Verify-Email/
packages =setuptools.find_packages()
classifiers =
         Environment :: Web Environment
         Framework :: Django CMS :: 3.8
         Intended Audience :: Developers
         Programming Language :: Python :: 3.6
         License :: OSI Approved :: MIT License
         Operating System :: OS Independent
python_requires = >=3.6

[options]
include_package_data = true
packages = find:
