[metadata]
name = django-email-validation
version = 0.9.0
author = leolivier
author_email = levillain.olivier@gamil.com
description = A Django app for email verification. Forked from foo290 s Django-Verify-Email v2.0.3
url = https://github.com/leolivier/Django-Verify-Email/
packages =setuptools.find_packages()
classifiers =
         Environment :: Web Environment
         Framework :: Django CMS :: 3.8
         Intended Audience :: Developers
         Programming Language :: Python :: 3.6
         License :: OSI Approved :: MIT License
         Operating System :: OS Independent
python_requires = >=3.6

[options]
include_package_data = true
packages = find:
